--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "dependencies": {
     "@abacritt/angularx-social-login": "2.0.X",
-    "@angular/animations": "^15.0.0",
+    "@angular/animations": "^15.2.10",
     "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
@@ -23,6 +23,7 @@
     "@angular/router": "^15.0.0",
     "@material-ui/core": "^4.12.4",
     "bootstrap": "^5.3.3",
+    "ngx-toastr": "^15.2.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
