--- a/angular.json
+++ b/angular.json
@@ -95,7 +95,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/ngx-toastr/toastr.css" 
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/bootstrap-css-only/css/bootstrap.min.css"
             ],
             "scripts": []
           }
