--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.0.0",
     "@material-ui/core": "^4.12.4",
     "bootstrap": "^5.3.3",
+    "ng-cdbangular": "^1.2.2",
     "ngx-toastr": "^15.2.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
