--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "bootstrap": "^5.3.3",
     "ng-cdbangular": "^1.2.2",
     "ngx-toastr": "^15.2.2",
+    "primeicons": "^7.0.0",
+    "primeng": "^15.4.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
